<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Botanist</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Flowey</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_add_plant">Add New Plant</string>
    <string name="plant_nickname">Flowey</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_similar_plants">Similar Plants</string>
    <string name="title_activity_disease">Diseases and Pests</string>
    <string name="loading_text">Loading…</string>
    <string name="version_fmt">Version %s</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Delete Account</string>
    <string name="gif_fmt">GIF Location: %s</string>
    <string name="name_fmt">Name: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="botanist_since_fmt">Botanist Since: %s</string>
    <string name="plants_number_fmt">Number of plants: %d</string>
    <string name="species_fmt">Species: %s</string>
    <string name="level_fmt">Level: %s</string>
    <string name="gif_loading">Creating GIF…</string>
    <string name="level_0">Plant Murderer</string>
    <string name="level_1">Little Botanist</string>
    <string name="level_2">Heisenberg</string>
    <string name="level_3">The Botanist</string>
    <string name="server_client_id" translatable="false">993462563911-9h2lig8m0klrfst5ob8lu2lprnqgf2nf.apps.googleusercontent.com</string>
    <string name="fertilize_plant">Fertilize Plant</string>
    <string name="set_time">Set Time</string>
    <string name="revoke_access_message">All your data will be permanently deleted. Are you sure you want to delete your account?</string>
    <string name="revoke_access_title">Delete Account</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="sign_out_title">Sign out</string>
    <string name="delete_message">Are you sure you want to delete this plant?</string>
    <string name="delete_dialog_title">Delete Plant</string>
    <string name="share_dialog_title">Share Plant…</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="water_plant">Water Plant</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account">Account</string>
    <string name="shop">Shop</string>
    <string name="similar">Similar Plants</string>
    <string name="diseases">Diseases &amp; Pests</string>
    <string name="signed_out">Signed out</string>
    <string name="account_picture">Account Picture</string>
    <string name="no_plants">No plants added</string>
    <string name="set_birthday">Set birthday</string>
    <string name="loading_similar">Loading similar plants…</string>
    <string name="create_gif">Export Pictures to GIF</string>
    <string name="plant_picture_desc">Plant picture</string>
    <string name="tap_to_take_a_picture">Choose a picture</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday (Today)</string>
    <string name="species">Species</string>
    <string name="add_plant">Add Plant</string>
    <string name="last_watered">Last watered (Now)</string>
    <string name="height_in_inches">Height in inches (0.0)</string>
    <string name="loading_care_tips">Loading care tips…</string>
    <string name="toxic_warning">TOXIC WARNING</string>
    <string name="toxic_warning_msg">This plant or parts of it are considered toxic. Do not ingest, handle with care, and keep out of reach of pets and small children.</string>
    <string name="height_fmt">Height: %.1f inches</string>
    <string name="update_height">Update Height</string>
    <string name="dialog_height_in_inches">Height in inches</string>
    <string name="noxious_warning_msg">NOXIOUS: This plant or parts of it are considered noxious. Be advised that it may have thorns, give off foul odors, choke or starve other plants, and may be considered a public nuisance.</string>
    <string name="quarantine_warning">QUARANTINE: U.S. federal and/or state laws require this plant to be grown under quarantine. Please check your local laws to make sure you are in compliance.</string>
    <string name="regulated_warning">REGULATED: This plant is placed under restrictions in some U.S. states. Please check your local laws to be sure that you are in compliance.</string>
    <string name="banned_warning">BANNED: Possession of this plant is illegal in some U.S. states. Please check your local laws to be sure that you are in compliance.</string>
    <string name="update_name">Change Name</string>
    <string name="loading_diseases">Loading diseases and pests…</string>
    <string name="user_badge_desc">User badge</string>
    <string name="fertilization_link" translatable="false"><a href='http://www.finegardening.com/fertilizing-basics'>Learn more about fertilization</a></string>
    <string name="care_tips">Care Tips</string>
    <string name="calendar_sync_text">Add to Calendar</string>
    <string name="calendar_dialog_text">Which reminder do you want to add to your calendar?</string>
    <string name="share">Share</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="stats">Statistics</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_help">Help</string>
    <string name="ready">Ready to begin?</string>
    <string name="find_tutorial">Click the Help option under the main screen menu to view these instructions again.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="desc_water_chart">Weekly Watering Summary</string>
    <string name="desc_height_chart">Plant Growth</string>
    <string name="welcome_to_botanist">Welcome to Botanist</string>
    <string name="sign_in_to_get_started">Sign in to get started</string>
    <string name="botanist_logo_desc">Botanist logo</string>
</resources>