<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scientists.happy.botanist.ui.ProfileActivity">

    <item
        android:id="@+id/action_similar_plants"
        android:orderInCategory="1"
        android:title="@string/similar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_diseases"
        android:orderInCategory="2"
        android:title="@string/diseases"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_gif"
        android:orderInCategory="3"
        android:title="@string/create_gif"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stats"
        android:orderInCategory="4"
        android:title="@string/stats"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="4"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>