
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/account_picture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/account_picture"
            android:src="@drawable/logo_botanist" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/name_fmt"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/email_fmt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/botanist_since"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/botanist_since_fmt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/plants_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/plants_number_fmt"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/user_badge"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:contentDescription="@string/user_badge_desc"
            android:src="@drawable/badge_level1"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/level_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/level_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/level_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="100"
            android:progress="25"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    </LinearLayout>

</ScrollView>