<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scientists.happy.botanist.ui.NewPlantActivity">

    <FrameLayout
        android:id="@+id/picture_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/plant_picture_desc"
            android:foreground="@color/mdtp_transparent_black"
            android:scaleType="centerCrop"
            android:src="@drawable/flowey" />

        <TextView
            android:id="@+id/picture_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tap_to_take_a_picture"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/species_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:text="@string/species"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textCapWords"
            android:hint="@string/name"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/birthday_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:inputType="date"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_inches"
            android:inputType="numberDecimal"
            android:maxLines="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_plant_button"
        android:text="@string/add_plant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_weight="0"/>

</LinearLayout>
