<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scientists.happy.botanist.ui.MainActivity">

    <item
        android:id="@+id/action_account"
        android:orderInCategory="1"
        android:title="@string/account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shop"
        android:orderInCategory="3"
        android:title="Shop"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
