<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width = "match_parent"
            android:layout_height= "222dp"
            android:scaleType="centerCrop"
            android:src="@drawable/flowey"
            android:id="@+id/plant_picture"
            android:contentDescription="@string/plant_picture_desc" />

        <TextView
            android:id="@+id/toxic_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:padding="@dimen/fab_margin"
            android:text="@string/toxic_warning"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:visibility="gone"
            tools:background="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/noxious_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorActivatedHighlight"
            android:padding="@dimen/fab_margin"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:visibility="gone"
            tools:background="?android:attr/colorActivatedHighlight" />

        <LinearLayout
            android:id="@+id/plantinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.96"
                android:paddingTop="8dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/plant_name"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_fmt"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/change_name_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2.24"
                    android:text="@string/update_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/plant_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/species_fmt"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/plant_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height_fmt"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/height_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/update_height" />

            </LinearLayout>

            <TextView
                android:id="@+id/title_care_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Care Tips:"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/care_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/loading_care_tips" />

            <Button
                android:id="@+id/water_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watered" />

            <Button
                android:id="@+id/poop_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fertilized" />

            <TextView
                android:id="@+id/invisible_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:onClick="onPressDelete"
            android:text="@string/delete_dialog_title"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>